Transfer size and contrast error fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #222725;
-    --secondary-color: #6b63ffca;
+    --primary-color: #1f2426;
+    --secondary-color: #2b4c7e;
     --accent1-color: #1f2426;
     --accent2-color: #f1faee;
 
@@ -55,6 +55,11 @@ header nav {
     display: flex;
     justify-content: flex-end;
     gap: 1rem;
+}
+
+header nav a:focus {
+    background-color: white;
+    color: var(--primary-color);
 }
 
 header nav a {
@@ -418,9 +423,17 @@ footer {
 /* HOME PAGE */
 
 .home-hero img {
-    width: 100%;
+    max-width: 1600px;
     height: 500px;
     object-fit: cover;
+}
+
+a:focus,
+    button:focus,
+    input:focus,
+    textarea:focus {
+    outline: 3px solid #000;
+    outline-offset: 2px;
 }
 
 .cta {
@@ -433,11 +446,16 @@ footer {
     display: inline-block;
     margin-top: 1rem;
     padding: 1rem 2rem;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     color: white;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
+}
+
+.cta-button:hover,
+.submit-btn:hover {
+    background-color: var(--primary-color);
 }
 
 .newsletter-section {
@@ -460,7 +478,7 @@ footer {
 
 .newsletter-form button {
     padding: .75rem 1.5rem;
-    background: var(--primary-color);
+    background: var(--secondary-color);
     color: white;
     border: none;
     cursor: pointer;
